# Cosmos_Augmentator

./: README.md  pyproject.toml
config/: augmentations copy.yaml  augmentations.yaml
cosmos_augmentor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
documentation/: Config.md  Install.md  Recommendations.md
scripts/: run_augmentation.sh
src/: __init__.py  augmentation_profile.py  augmentor.py  cli.py  config_schema.py  control_image_adapter.py  cosmos_runner.py  dataset_scanner.py  logging_utils.py  merger.py  metrics.py  segmentation_adapter.py  types.py
tests/: test_config_schema.py  test_metrics.py  test_segmentation_adapter.py
